-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.17.0, Lustre 2.16.1
-
3
-
9223372036854775807
This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>
This issue relates to the following test suite run:
https://testing.whamcloud.com/test_sets/4c194915-cf71-4986-895b-c2dbb8491679
test_16a failed with the following error:
fsx with O_DIRECT failed.
Test session details:
clients: https://build.whamcloud.com/job/lustre-master-next/867 - 5.14.0-427.42.1.el9_4.x86_64
servers: https://build.whamcloud.com/job/lustre-b2_15/100 - 4.18.0-553.27.1.el8_lustre.x86_64
This first started around 2025-03-07, and is failing interop testing between master/master-next and b2_14/b2_15/EXA6.
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanityn test_16a - fsx with O_DIRECT failed.
sanityn test_16k - fsx 1 FAILURE! rc=
- duplicates
-
LU-19181 interop sanity test_56wc: file data has changed (1): md5sum invalid argument
-
- Open
-
- is duplicated by
-
LU-19377 interop: osc_build_rpc(): prep_req failed: rc = -22
-
- Resolved
-
- is related to
-
LU-20520 Large unaligned bulk write hangs when client and server page sizes differ
-
- In Progress
-
- is related to
-
LU-17525 Unaligned DIO interop with different page sizes fails
-
- Resolved
-
-
LU-18691 quota interop w/64k pages
-
- Resolved
-
- mentioned in
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
- resolves
-
DDN-7006 Loading...