lustre/osc/osc_internal.h
@@ -67,6 +67,9 @@ int osc_ladvise_base(struct obd_export *exp, struct obdo *oa,
 		     struct ladvise_hdr *ladvise_hdr,
 		     obd_enqueue_update_f upcall, void *cookie,
 		     struct ptlrpc_request_set *rqset);
+struct osc_extent *osc_extent_clone(struct osc_object *obj,
+				    struct osc_extent *ext);
+void osc_extent_queue(struct osc_object *obj, struct osc_extent *ext, bool del);
 int osc_process_config_base(struct obd_device *obd, struct lustre_cfg *cfg);
 int osc_build_rpc(const struct lu_env *env, struct client_obd *cli,
 		  struct list_head *ext_list, int cmd);
